调整为兼容普通运行环境和docker运行环境